--- a/vacation-calendar/package.json
+++ b/vacation-calendar/package.json
@@ -4,7 +4,7 @@
   "description": "Quickly see when your colleagues are out of the office, with no manual entry required.",
   "main": "Code.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "push": "clasp push"
   },
   "repository": {
     "type": "git",
