Reduce eslint exceptions, less aggressively wrap comments

--- a/offsite-activity-signup/.eslintrc.json
+++ b/offsite-activity-signup/.eslintrc.json
@@ -6,7 +6,6 @@
   "rules": {
     "no-var": "off",
     "no-unused-vars": "off",
-    "max-len": ["error", { "code":  120 }],
-    "valid-jsdoc": "off"
+    "max-len": ["error", {"code": 100, "ignoreUrls": true}]
   }
 }
