Add ESLint changes to Event Session Sign up

--- a/event-session-signup/package.json
+++ b/event-session-signup/package.json
@@ -18,5 +18,9 @@
   "homepage": "https://github.com/gsuitedevs/solutions#readme",
   "dependencies": {
     "clasp": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.0.1",
+    "eslint-config-google": "^0.13.0"
   }
 }
