--- a/timesheets/src/appsscript.json
+++ b/timesheets/src/appsscript.json
@@ -2,5 +2,6 @@
   "timeZone": "America/New_York",
   "dependencies": {
   },
-  "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "exceptionLogging": "STACKDRIVER"
+}
+
