Revert "fixed comments - made more specific"
This reverts commit 45781835fe7c0db595615494190ea834f847858b.

--- a/timesheets/src/appsscript.json
+++ b/timesheets/src/appsscript.json
@@ -2,6 +2,5 @@
   "timeZone": "America/New_York",
   "dependencies": {
   },
-  "exceptionLogging": "STACKDRIVER"
-}
-
+  "exceptionLogging": "STACKDRIVER",
+  "runtimeVersion": "V8"
