--- a/group-membership/src/appsscript.json
+++ b/group-membership/src/appsscript.json
@@ -8,14 +8,15 @@
     }]
   },
   "exceptionLogging": "STACKDRIVER",
+  "runtimeVersion": "V8",
   "oauthScopes": [
     "https://www.googleapis.com/auth/admin.directory.group.member",
-    "https://www.googleapis.com/auth/documents", 
-    "https://www.googleapis.com/auth/drive.readonly", 
+    "https://www.googleapis.com/auth/documents",
+    "https://www.googleapis.com/auth/drive.readonly",
     "https://www.googleapis.com/auth/groups",
-    "https://www.googleapis.com/auth/script.external_request", 
-    "https://www.googleapis.com/auth/script.scriptapp", 
-    "https://www.googleapis.com/auth/script.send_mail", 
+    "https://www.googleapis.com/auth/script.external_request",
+    "https://www.googleapis.com/auth/script.scriptapp",
+    "https://www.googleapis.com/auth/script.send_mail",
     "https://www.googleapis.com/auth/spreadsheets.currentonly"
   ]
 }
