Refactoring and V8 update
Includes ability for using formatted Google Sheets cell values for currencies, dates and more as well as detecting/ignoring filtered hidden rows. Code also updated to highlight Gmail `.sendMail()` options

--- a/mail-merge/src/appsscript.json
+++ b/mail-merge/src/appsscript.json
@@ -1,5 +1,14 @@
 {
-    "timeZone": "YOUR TIMEZONE HERE",
-    "dependencies": {},
-    "exceptionLogging": "STACKDRIVER"
-}
+    "timeZone": "Europe/London",
+    "dependencies": {
+      "enabledAdvancedServices": [
+        {
+          "userSymbol": "Sheets",
+          "serviceId": "sheets",
+          "version": "v4"
+        }
+      ]
+    },
+    "exceptionLogging": "STACKDRIVER",
+    "runtimeVersion": "V8"
+  }
