Updated to Mail Merge solution to use V8 runtime (#126)
* Initial commit of Mail Merge solution

Create and distribute visual rich mail merges with Gmail and Google Sheets

* Minor edits to readme text

Edits based on comments in https://github.com/gsuitedevs/solutions/pull/65#issue-317359815

* update to head

* Updated to head

* Fix for null error when sending emails without variable tags

Fix for issue #98 on gsuitedevs branch https://github.com/gsuitedevs/solutions/issues/98

* Refactoring and V8 update

Includes ability for using formatted Google Sheets cell values for currencies, dates and more as well as detecting/ignoring filtered hidden rows. Code also updated to highlight Gmail `.sendMail()` options

* Updated mail merge solution moving Advanced Sheets Service and moving to V8

Removed dependency on Advanced Sheets Service

--- a/mail-merge/src/appsscript.json
+++ b/mail-merge/src/appsscript.json
@@ -1,5 +1,5 @@
 {
-    "timeZone": "YOUR TIMEZONE HERE",
-    "dependencies": {},
-    "exceptionLogging": "STACKDRIVER"
-}
+    "timeZone": "Europe/London",
+    "exceptionLogging": "STACKDRIVER",
+    "runtimeVersion": "V8"
+  }
